--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=10.0.0.156
 DB_PORT=3306
-DB_DATABASE=sistem_informasi_hotel_kalimosodo
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=hotel
+DB_USERNAME=ilham
+DB_PASSWORD=Ilham123!
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
